# acopoweropt

./: .gitignore  ColonyInitializer.ipynb  Makefile  Notebook.ipynb  README.md  README.rst  SystemSolver.ipynb  main.py  pyproject.toml  systems.json
acopoweropt/: colony.py  system.py
notebooks/: ColonyInitializer.ipynb  Notebook.ipynb  SystemSolver.ipynb
tests/: test_acopoweropt.py  test_colony.py  test_system.py
