[tool.poetry]
name = "acopoweropt"
version = "0.3.0"
description = "Ant Colony Power Systems Optimizer"
authors = ["Ettore Aquino <ettore@ettoreaquino.com>"]

readme = "README.md"

include = [
    { path = "tests", format = "sdist" }
]

exclude = ["Makefile","README.rst","systems.json","Notebook.ipynb","SystemSolver.ipynb"]

repository = "https://github.com/ettoreaquino/acopoweropt"

keywords = ["power systems", "optimization", "python"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
cvxopt = "^1.2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.0.16"
pylint = "^2.8.3"
mypy = "^0.902"
black = "^21.6b0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
